tests/e2e/semantics/mutation/int_increment.error
Error: syntax error in story at line 3, column 1

3|    b = "foo"
      ^

E0100: Can't assign `string` to `int`
