tests/e2e/semantics/mutation/int_increment.story
a = 0
b = a.increment()
b = "foo"
